tui/tests/snapshots/notebook__note_actions_open.snap
---
source: tui/tests/notebook.rs
expression: text
snapshot_kind: text
---
 Note actions dialog                                                                                   [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues :D                                                     
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ ┌───────Note Actions───────┐                                              
                                            ▐ │                          │                                              
                                            ▐ │   Rename note            │                                              
                                            ▐ │   Remove note            │                                              
                                            ▐ │   Close                  │                                              
                                            ▐ │                          │                                              
                                            ▐ └──────────────────────────┘                                              
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
