tui/tests/snapshots/notebook__remove_note_confirm.snap
---
source: tui/tests/notebook.rs
expression: text
snapshot_kind: text
---
 Note actions dialog                                                                                   [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues :D                                                     
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                        ┌───────────────Confirm────────────────┐                                        
                                        │                                      │                                        
                                        │  Confirm to remove note?             │                                        
                                        │                                      │                                        
                                        │                                      │                                        
                                        │  [y] Confirm                         │                                        
                                        │  [n] Cancel                          │                                        
                                        │                                      │                                        
                                        └──────────────────────────────────────┘                                        
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
